--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -3,7 +3,10 @@
   background-color: blanchedalmond;
 
 }
-
+app-ai-toggle{
+align-items: center;
+justify-content: center;
+transform: scale(1.2);}
 h1 {
   text-align: center;
   color: #FF6B6B;
